build_err.txt
    Checking sql-log-parser v2.0.0 (D:\linh_ta_linh_tinh\log-helper)
warning: unexpected `cfg` condition value: `sql`
 --> src\utils\mod.rs:7:7
  |
7 | #[cfg(feature = "sql")]
  |       ^^^^^^^^^^^^^^^ help: remove the condition
  |
  = note: no expected values for `feature`
  = help: consider adding `sql` as a feature in `Cargo.toml`
  = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html> for more information about checking conditional configuration
  = note: `#[warn(unexpected_cfgs)]` on by default

error[E0599]: no method named `read_to_end` found for struct `File` in the current scope
  --> src\utils\encoding.rs:42:10
   |
42 |     file.read_to_end(&mut buffer)?;
   |          ^^^^^^^^^^^ method not found in `File`
   |
  --> /rustc/254b59607d4417e9dffbc307138ae5c86280fe4c\library\std\src\io\mod.rs:935:8
   |
   = note: the method is available for `File` here
   |
   = help: items from traits can only be used if the trait is in scope
help: trait `Read` which provides `read_to_end` is implemented but not in scope; perhaps you want to import it
   |
 5 + use std::io::Read;
   |

warning: unused variable: `params_match`
   --> src\core\log_parser.rs:351:42
    |
351 | ...                   if let Some(params_match) = caps.get(1) {
    |                                   ^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_params_match`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0599`.
warning: `sql-log-parser` (bin "sql-log-parser") generated 2 warnings
error: could not compile `sql-log-parser` (bin "sql-log-parser") due to 1 previous error; 2 warnings emitted
